add main colors

--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -1,3 +1,21 @@
+$color-primary-1: #DCE123;
+$color-primary-2: #A8AA2A;
+$color-primary-3: #C2C52E;
+$color-primary-4: #F4F750;
+
+$color-secondary-1: #FFFFFF;
+$color-secondary-2: #929C9F;
+$color-secondary-3: #F1F5FA;
+$color-secondary-4: #F8FAFC;
+
+$color-tertiary-1: #212628;
+$color-tertiary-2: #161A1B
+$color-tertiary-3: #4B5153;
+
+$color-quaternary-1: #F8F8E7;
+$color-quaternary-2: #CECEC2;
+$color-quaternary-3: #E8E8C0;
+
 $color-deposit-1: #7196DA;
 $color-deposit-2: #658ACF;
 $color-deposit-3: #557DC8;
