--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -9,7 +9,7 @@ $color-secondary-3: #F1F5FA;
 $color-secondary-4: #F8FAFC;
 
 $color-tertiary-1: #212628;
-$color-tertiary-2: #161A1B
+$color-tertiary-2: #161A1B;
 $color-tertiary-3: #4B5153;
 
 $color-quaternary-1: #F8F8E7;
