include created components

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,3 +7,6 @@
 @import 'base/common.scss';
 
 @import 'components/top-menu.scss';
+@import 'components/text-settings.scss';
+@import 'components/logo.scss';
+@import 'components/navigation.scss';
