add variable $color-tertiry-4: #000

--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -11,6 +11,7 @@ $color-secondary-4: #F8FAFC;
 $color-tertiary-1: #212628;
 $color-tertiary-2: #161A1B;
 $color-tertiary-3: #4B5153;
+$color-tertiary-4: #000000;
 
 $color-quaternary-1: #F8F8E7;
 $color-quaternary-2: #CECEC2;
