--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,3 +13,4 @@
 @import 'components/navigation.scss';
 @import 'components/slider.scss';
 @import 'components/card.scss';
+@import 'components/button.scss';
